--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.11",
     "vue2-google-maps": "^0.10.7",
     "vuedraggable": "^2.24.3",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
