--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "NODE_ENV=development && npm run client-install && npm run client-build && NODE_ENV=production",
-    "client": "npm start --prefix client",
-    "client-build": "npm run build --prefix client",
-    "client-install": "npm install --prefix client",
-    "start": "vue-cli-service serve",
+    "postinstall": "npm run build",
+    "start": "node src/server.js",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -29,9 +27,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "express": "^4.17.1",
     "prettier": "^2.2.1",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
+    "serve-static": "^1.14.1",
     "vue-cli-plugin-vuetify": "~2.3.1",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
