--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@googlemaps/js-api-loader": "^1.11.3",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue2-google-maps": "^0.10.7",
