--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
+    "moment": "^2.29.1",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue2-google-maps": "^0.10.7",
